--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -11,6 +11,7 @@ $acmLight: #ffffff;
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 // Sizes:
+$breakpoint: 768px;
 $minScreenW: 280;
 $maxScreenW: 1920;
 $minHFontSize: 22;
