--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -8,7 +8,7 @@ $acmDark: #212121;
 $acmLight: #ffffff;
 
 // Fonts:
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700");
 
 // Sizes:
 $breakpoint: 768px;
@@ -38,7 +38,11 @@ $maxPFontSize: 36;
 // Branding Macros
 .brand-em {
   // `em` is short for "emphasis"
-  font-weight: bold;
+  font-weight: 700;
+}
+
+.headers {
+  font-weight: 600;
 }
 
 .brand-blue {
