--- a/static/global.css
+++ b/static/global.css
@@ -26,9 +26,54 @@ body,
 
   --desktop-breakpoint: 768px;
 
+  /* Fluid font size is the magical numbers for fluid font sizing. It should be
+   * put into parent containers. */
+  --fluid-font-size: clamp(1vw, 0.7em, 3vw);
+
+  --p-font-size: 2em;
+  --h-font-size-med: 3em;
+
   --min-p-font-size: 18px;
   --max-p-font-size: 36px;
   --min-h-font-size: 22px;
   --max-h-font-size: 86px;
   --max-h-font-size-med: 64px;
+}
+
+/* Branding Macros */
+.brand-em {
+  /* `em` is short for "emphasis" */
+  font-weight: 700;
+}
+
+.headers {
+  font-weight: 600;
+}
+
+.brand-blue {
+  color: var(--acm-blue);
+}
+
+.brand-bluer {
+  color: var(--acm-bluer);
+}
+
+.brand-pink {
+  color: var(--acm-pink);
+}
+
+.brand-purple {
+  color: var(--acm-purple);
+}
+
+.brand-red {
+  color: var(--acm-red);
+}
+
+.brand-dark {
+  color: var(--acm-dark);
+}
+
+.brand-light {
+  color: var(--acm-light);
 }
