--- a/static/theme.scss
+++ b/static/theme.scss
@@ -1,55 +1,7 @@
 @import "../node_modules/rfs/scss";
 
-p.size-xs { @include font-size(16px); }
-p.size-s { @include font-size(18px); }
-p.size-m { @include font-size(24px); }
-p.size-l { @include font-size(36px); }
-p.size-xl { @include font-size(48px); }
-
-section {
-    div {
-        p .headers {
-          @include font-size(16px);
-        }
-    }
-
-    .left-content .main-text {
-        @include font-size(48px);
-    }
-
-    h2, .headers {
-        @include font-size(36px);
-    }
-
-    p {
-        @include font-size(16px);
-    }
-
-    .path-item p {
-        @include font-size(24px);
-    }
-}
-
-h2 {
-    @include font-size(36px);
-}
-
-h3 {
-    @include font-size(18px);
-}
-
-p {
-    @include font-size(16px);
-}
-
-section :global(h2), div :global(h2), .info-container :global(h2) {
-    @include font-size(36px);
-}
-
-section :global(p), div :global(p), .info-container :global(p) {
-    @include font-size(16px);
-}
-
-.call-to-action {
-    @include font-size(24px);
-}
+.size-xs { @include font-size(16px); }
+.size-s { @include font-size(18px); }
+.size-m { @include font-size(24px); }
+.size-l { @include font-size(36px); }
+.size-xl { @include font-size(48px); }
