--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700");
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -15,7 +16,7 @@ body,
 }
 
 body {
-  background: #F8F8F8;
+  background: #f8f8f8;
 }
 
 .info-screen {
@@ -24,13 +25,13 @@ body {
 }
 
 :root {
-  --acm-blue: #2C91C6;
-  --acm-bluer: #1E6CFF;
-  --acm-pink: #FF4365;
-  --acm-purple: #9D35E7;
-  --acm-red: #D41153;
+  --acm-blue: #2c91c6;
+  --acm-bluer: #1e6cff;
+  --acm-pink: #ff4365;
+  --acm-purple: #9d35e7;
+  --acm-red: #d41153;
   --acm-dark: #101315;
-  --acm-light: #F8F8F8;
+  --acm-light: #f8f8f8;
 
   --desktop-breakpoint: 768px;
   --navbar-height: 82px;
