--- a/static/theme.scss
+++ b/static/theme.scss
@@ -2,6 +2,7 @@
 
 .size-xs { @include font-size(16px); }
 .size-s { @include font-size(18px); }
-.size-m { @include font-size(24px); }
+.size-m, .call-to-action { @include font-size(24px); }
 .size-l { @include font-size(36px); }
 .size-xl { @include font-size(48px); }
+
