Fixed accidental space in about page, credited ACM W in nodeBuds page

--- a/static/global.css
+++ b/static/global.css
@@ -30,6 +30,7 @@ body {
   --acm-pink: #ff4365;
   --acm-purple: #9d35e7;
   --acm-red: #d41153;
+  --acm-sky: #38b6ff;
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
 
