--- a/static/theme.scss
+++ b/static/theme.scss
@@ -1,8 +1,18 @@
-@import "../node_modules/rfs/scss";
+@import '../node_modules/rfs/scss';
 
-.size-xs { @include font-size(16px); }
-.size-s { @include font-size(18px); }
-.size-m, .call-to-action { @include font-size(24px); }
-.size-l { @include font-size(36px); }
-.size-xl { @include font-size(48px); }
-
+.size-xs {
+  @include font-size(16px);
+}
+.size-s {
+  @include font-size(18px);
+}
+.size-m,
+.call-to-action {
+  @include font-size(24px);
+}
+.size-l {
+  @include font-size(36px);
+}
+.size-xl {
+  @include font-size(48px);
+}
