--- a/static/global.css
+++ b/static/global.css
@@ -31,6 +31,7 @@ body {
   --acm-purple: #9d35e7;
   --acm-red: #d41153;
   --acm-sky: #38b6ff;
+  --acm-sky-light: #38b6ff0a;
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
 
