Blog page ready

--- a/static/global.css
+++ b/static/global.css
@@ -31,7 +31,6 @@ body {
   --acm-purple: #9d35e7;
   --acm-red: #d41153;
   --acm-sky: #38b6ff;
-  --acm-sky-light: #38b6ff0a;
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
 
@@ -66,6 +65,10 @@ body {
     --body-font-size: 24px;
     --margin-text-font-size: 16px;
   }
+}
+
+.ita {
+  font-style: italic;
 }
 
 /* Branding Macros */
