Uninstalled rfs.scss dependency

--- a/static/global.css
+++ b/static/global.css
@@ -101,6 +101,26 @@ body {
   font-weight: 600;
 }
 
+.size-xs {
+  font-size: var(--size-xs);
+}
+
+.size-sm {
+  font-size: var(--size-sm);
+}
+
+.size-md {
+  font-size: var(--size-md);
+}
+
+.size-lg {
+  font-size: var(--size-lg);
+}
+
+.size-xl {
+  font-size: var(--size-xl);
+}
+
 .brand-blue {
   color: var(--acm-blue);
 }
