--- a/static/global.css
+++ b/static/global.css
@@ -9,14 +9,21 @@ body {
 html,
 body,
 #svelte {
-  color: #101315;
+  color: var(--acm-dark);
   font-family: 'Poppins', sans-serif;
   padding: 0;
   margin: 0;
 }
 
 body {
-  background: #f8f8f8;
+  background: var(--acm-light);
+}
+
+.dark {
+  --acm-dark: #dddddd;
+  --acm-light: #101315;
+  --navbar-bg: var(--acm-gray);
+  --footer-bg: var(--acm-gray);
 }
 
 .info-screen {
@@ -31,6 +38,7 @@ body {
   --acm-purple: #9d35e7;
   --acm-red: #d41153;
   --acm-sky: #38b6ff;
+  --acm-gray: #292c2f;
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
 
@@ -41,6 +49,8 @@ body {
 
   --desktop-breakpoint: 768px;
   --navbar-height: 82px;
+  --navbar-bg: var(--acm-light);
+  --footer-bg: var(--acm-dark);
 
   /* Fluid font size is the magical numbers for fluid font sizing. It should be
    * put into parent containers. */
