--- a/static/global.css
+++ b/static/global.css
@@ -18,6 +18,8 @@
 
   --perma-light: #f8f8f8;
 
+  /* Generator: https://xgkft.csb.app/ */
+  --size-xxl: clamp(2.8125rem, 1.8403rem + 5.5556vw, 5.3125rem);
   --size-xl: clamp(2rem, 1.7545rem + 1.0909vw, 3.5rem);
   --size-lg: clamp(1.5rem, 1.3773rem + 0.5455vw, 2.25rem);
   --size-md: clamp(1.125rem, 1.0636rem + 0.2727vw, 1.5rem);
@@ -96,6 +98,10 @@ body {
 .acm-sky,
 .brand-sky {
   color: var(--acm-sky);
+}
+
+.size-xxl {
+  font-size: var(--size-xxl);
 }
 
 .size-xl {
