--- a/static/global.css
+++ b/static/global.css
@@ -10,7 +10,7 @@
   --acm-purple: #9d35e7;
   --acm-red: #d41153;
   --acm-sky: #38b6ff;
-  --acm-canvas: #f6f8fa;
+  --acm-canvas: #eaeaea;
 
   --acm-general-rgb: 44, 145, 198;
   --acm-algo-rgb: 157, 53, 231;
@@ -132,7 +132,7 @@ body {
 .light {
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
-  --acm-canvas: #f6f8fa;
+  --acm-canvas: #eaeaea;
   --navbar-bg: var(--acm-light);
   --footer-bg: var(--acm-dark);
   --card-bg: var(--acm-light);
@@ -155,6 +155,7 @@ body {
   body:not(.dark) {
     --acm-dark: #101315;
     --acm-light: #f8f8f8;
+    --acm-canvas: #eaeaea;
     --navbar-bg: var(--acm-light);
     --footer-bg: var(--acm-dark);
     --card-bg: var(--acm-light);
@@ -167,6 +168,7 @@ body {
   body:not(.light) {
     --acm-dark: #f8f8f8;
     --acm-light: #101315;
+    --acm-canvas: #161b22;
     --navbar-bg: var(--acm-light);
     --footer-bg: var(--acm-gray);
     --card-bg: var(--acm-gray);
