--- a/static/global.css
+++ b/static/global.css
@@ -35,6 +35,7 @@ body,
   color: var(--acm-dark);
   padding: 0;
   margin: 0;
+  transition: 0.2s;
 }
 html,
 body,
@@ -44,6 +45,7 @@ body,
 
 body {
   background-color: var(--acm-light);
+  transition: 0.2s;
 }
 
 .brand-bold,
