--- a/static/global.css
+++ b/static/global.css
@@ -3,6 +3,7 @@
 :root {
   --acm-blue: #2c91c6;
   --acm-bluer: #1e6cff;
+  --acm-emerald: #21d19f;
   --acm-dark: #101315;
   --acm-gray: #292c2f;
   --acm-light: #f8f8f8;
@@ -70,6 +71,10 @@ body {
 .acm-bluer,
 .brand-bluer {
   color: var(--acm-bluer);
+}
+.acm-emerald,
+brand-emerald {
+  color: var(--acm-emerald);
 }
 
 .acm-dark,
