--- a/static/global.css
+++ b/static/global.css
@@ -4,6 +4,7 @@
   --acm-blue: #2c91c6;
   --acm-bluer: #1e6cff;
   --acm-emerald: #21d19f;
+  --acm-yellow: #ffd029;
   --acm-dark: #101315;
   --acm-gray: #292c2f;
   --acm-light: #f8f8f8;
@@ -72,9 +73,15 @@ body {
 .brand-bluer {
   color: var(--acm-bluer);
 }
+
 .acm-emerald,
 .brand-emerald {
   color: var(--acm-emerald);
+}
+
+.acm-yellow,
+.brand-yellow {
+  color: var(--acm-yellow);
 }
 
 .acm-dark,
