--- a/static/assets/portfolio/demo/portfolio.css
+++ b/static/assets/portfolio/demo/portfolio.css
@@ -1,4 +1,5 @@
-:root {
+:root,
+body {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -29,13 +30,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -48,6 +42,10 @@ h1 {
 #app {
   margin: 0 auto;
   text-align: center;
+  display: flex;
+  min-width: 320px;
+  min-height: 100vh;
+  width: 100%;
 }
 
 button {
@@ -72,7 +70,8 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  :root,
+  body {
     color: #213547;
     background-color: #ffffff;
   }
