--- a/static/global.css
+++ b/static/global.css
@@ -149,24 +149,28 @@ body {
   --acm-dark: #101315;
   --acm-light: #f8f8f8;
   --acm-canvas: #eaeaea;
+  --nav-shadow: 0 3px 12px rgba(16, 19, 21, 0.1);
   --navbar-bg: var(--acm-light);
   --footer-bg: var(--acm-dark);
   --card-bg: var(--acm-light);
   --button-bg: var(--acm-dark);
   --button-hover: var(--acm-blue);
   --button-toggle: var(--acm-dark);
+  --box-shadow: var(--nav-shadow);
 }
 
 .dark {
   --acm-dark: #f8f8f8;
   --acm-light: #101315;
   --acm-canvas: #161b22;
-  --navbar-bg: var(--acm-gray);
+  --nav-shadow: 0 2px rgb(49, 49, 49);
+  --navbar-bg: rgba(16, 19, 21, 0.9);
   --footer-bg: var(--acm-gray);
   --card-bg: var(--acm-gray);
   --button-bg: var(--acm-dark);
   --button-hover: #3d4043;
-  --button-toggle: var(--acm-light);
+  --button-toggle: var(--acm-dark);
+  --box-shadow: var(--nav-shadow);
 }
 
 @media (prefers-color-scheme: light) {
@@ -174,12 +178,14 @@ body {
     --acm-dark: #101315;
     --acm-light: #f8f8f8;
     --acm-canvas: #eaeaea;
+    --nav-shadow: 0 3px 12px rgba(16, 19, 21, 0.1);
     --navbar-bg: var(--acm-light);
     --footer-bg: var(--acm-dark);
     --card-bg: var(--acm-light);
     --button-bg: var(--acm-dark);
     --button-hover: var(--acm-blue);
     --button-toggle: var(--acm-dark);
+    --box-shadow: var(--nav-shadow);
   }
 }
 
@@ -188,11 +194,13 @@ body {
     --acm-dark: #f8f8f8;
     --acm-light: #101315;
     --acm-canvas: #161b22;
-    --navbar-bg: var(--acm-gray);
+    --nav-shadow: 0 2px rgb(49, 49, 49);
+    --navbar-bg: rgba(16, 19, 21, 0.9);
     --footer-bg: var(--acm-gray);
     --card-bg: var(--acm-gray);
     --button-bg: var(--acm-gray);
     --button-hover: #3d4043;
-    --button-toggle: var(--acm-light);
+    --button-toggle: var(--acm-gray);
+    --box-shadow: var(--nav-shadow);
   }
 }
