--- a/static/global.css
+++ b/static/global.css
@@ -40,6 +40,7 @@ body,
   margin: 0;
   transition: 0.2s;
 }
+
 html,
 body,
 #svelte {
@@ -50,6 +51,10 @@ body,
 body {
   background-color: var(--acm-light);
   transition: 0.2s;
+}
+
+body:has(nav > input[type='checkbox']:checked) {
+  overflow: hidden;
 }
 
 .brand-bold,
