--- a/static/global.css
+++ b/static/global.css
@@ -6,6 +6,7 @@
   --acm-turquoise: #11d4b1;
   --acm-emerald: #21d19f;
   --acm-yellow: #ffd029;
+  --acm-orange: #ff7917;
   --acm-dark: #101315;
   --acm-gray: #292c2f;
   --acm-light: #f8f8f8;
@@ -21,6 +22,7 @@
   --acm-design-rgb: 255, 67, 101;
   --acm-dev-rgb: 30, 108, 255;
   --acm-foundry-rgb: 111, 22, 255;
+  --acm-icpc-rgb: 255, 121, 23;
   --acm-marketing-rgb: 212, 17, 83;
   --acm-oss-rgb: 17, 212, 177;
   --acm-special-events-rgb: 255, 208, 41;
