--- a/static/global.css
+++ b/static/global.css
@@ -3,8 +3,10 @@
 :root {
   --acm-blue: #2c91c6;
   --acm-bluer: #1e6cff;
+  --acm-turquoise: #11d4b1;
   --acm-emerald: #21d19f;
   --acm-yellow: #ffd029;
+  --acm-orange: #ff7917;
   --acm-dark: #101315;
   --acm-gray: #292c2f;
   --acm-light: #f8f8f8;
@@ -19,8 +21,10 @@
   --acm-algo-rgb: 157, 53, 231;
   --acm-design-rgb: 255, 67, 101;
   --acm-dev-rgb: 30, 108, 255;
-  --acm-foundry-rgb: 111, 22, 255;
+  --acm-gamedev-rgb: 111, 22, 255;
+  --acm-icpc-rgb: 255, 121, 23;
   --acm-marketing-rgb: 212, 17, 83;
+  --acm-oss-rgb: 17, 212, 177;
   --acm-special-events-rgb: 255, 208, 41;
 
   --perma-light: #f8f8f8;
