--- a/static/global.css
+++ b/static/global.css
@@ -1,29 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700');
 
 :root {
+  --acm-sky: #38b6ff;
   --acm-blue: #2c91c6;
   --acm-bluer: #1e6cff;
   --acm-turquoise: #11d4b1;
   --acm-emerald: #21d19f;
-  --acm-yellow: #ffd029;
+  --acm-lemon: #ffd029;
   --acm-orange: #ff7917;
+  --acm-red: #d41153;
+  --acm-pink: #ff4365;
+  --acm-blush: #fe0ec9;
+  --acm-purple: #9d35e7;
+  --acm-darker: #092D71;
+  --acm-darkest: #052155;
   --acm-dark: #101315;
   --acm-gray: #292c2f;
   --acm-light: #f8f8f8;
-  --acm-pink: #ff4365;
-  --acm-purple: #9d35e7;
-  --acm-red: #d41153;
-  --acm-sky: #38b6ff;
   --acm-canvas: #eaeaea;
 
-  --acm-general-rgb: 44, 145, 198;
-  --acm-ai-rgb: 33, 209, 159;
+  --acm-general-rgb: 5, 163, 255;
+  --acm-ai-rgb: 53, 231, 146;
   --acm-algo-rgb: 157, 53, 231;
   --acm-design-rgb: 255, 67, 101;
   --acm-dev-rgb: 30, 108, 255;
   --acm-gamedev-rgb: 212, 17, 83;
   --acm-icpc-rgb: 255, 121, 23;
-  --acm-marketing-rgb: 212, 17, 83;
+  --acm-marketing-rgb: 254, 14, 201;
   --acm-oss-rgb: 17, 212, 177;
   --acm-special-events-rgb: 255, 208, 41;
 
@@ -98,9 +101,9 @@ body:has(nav > input[type='checkbox']:checked) {
   color: var(--acm-emerald);
 }
 
-.acm-yellow,
-.brand-yellow {
-  color: var(--acm-yellow);
+.acm-lemon,
+.brand-lemon {
+  color: var(--acm-lemon);
 }
 
 .acm-dark,
