Add lowercase d in hex color.

--- a/static/global.css
+++ b/static/global.css
@@ -12,7 +12,7 @@
   --acm-pink: #ff4365;
   --acm-blush: #fe0ec9;
   --acm-purple: #9d35e7;
-  --acm-darker: #092D71;
+  --acm-darker: #092d71;
   --acm-darkest: #052155;
   --acm-dark: #101315;
   --acm-gray: #292c2f;
