Add `--acm-redder` to global.css
Add `--acm-redder` to global.css and move character gif to assets folder

--- a/static/global.css
+++ b/static/global.css
@@ -9,6 +9,7 @@
   --acm-lemon: #ffd029;
   --acm-orange: #ff7917;
   --acm-red: #d41153;
+  --acm-redder: #6e0025;
   --acm-pink: #ff4365;
   --acm-blush: #fe0ec9;
   --acm-purple: #9d35e7;
