--- a/static/global.css
+++ b/static/global.css
@@ -30,6 +30,7 @@
   --acm-marketing-rgb: 254, 14, 201;
   --acm-oss-rgb: 17, 212, 177;
   --acm-special-events-rgb: 255, 208, 41;
+  --acm-nodebuds-rgb: 212, 17, 83;
 
   --perma-light: #f8f8f8;
   --perma-dark: #101315;
@@ -107,6 +108,36 @@ body:has(nav > input[type='checkbox']:checked) {
   color: var(--acm-lemon);
 }
 
+.acm-pink,
+.brand-pink {
+  color: var(--acm-pink);
+}
+
+.acm-blush,
+.brand-blush {
+  color: var(--acm-blush);
+}
+
+.acm-purple,
+.brand-purple {
+  color: var(--acm-purple);
+}
+
+.acm-red,
+.brand-red {
+  color: var(--acm-red);
+}
+
+.acm-redder,
+.brand-redder {
+  color: var(--acm-redder);
+}
+
+.acm-sky,
+.brand-sky {
+  color: var(--acm-sky);
+}
+
 .acm-dark,
 .brand-dark {
   color: var(--acm-dark);
@@ -120,26 +151,6 @@ body:has(nav > input[type='checkbox']:checked) {
 .acm-light,
 .brand-light {
   color: var(--acm-light);
-}
-
-.acm-pink,
-.brand-pink {
-  color: var(--acm-pink);
-}
-
-.acm-purple,
-.brand-purple {
-  color: var(--acm-purple);
-}
-
-.acm-red,
-.brand-red {
-  color: var(--acm-red);
-}
-
-.acm-sky,
-.brand-sky {
-  color: var(--acm-sky);
 }
 
 .size-xxl {
