--- a/static/global.css
+++ b/static/global.css
@@ -206,13 +206,11 @@ body:has(nav > input[type='checkbox']:checked) {
   --acm-canvas: #eaeaea;
   --acm-odd: var(--perma-light);
   --acm-even: var(--acm-dew);
-  --nav-shadow: 0 3px 12px rgba(16, 19, 21, 0.1);
-  --navbar-bg: var(--acm-light);
+  --navbar-bg: var(--perma-light);
   --card-bg: var(--acm-light);
   --button-bg: var(--acm-dark);
   --button-hover: var(--acm-blue);
   --button-toggle: var(--acm-dark);
-  --box-shadow: var(--nav-shadow);
 }
 
 .dark {
@@ -221,13 +219,11 @@ body:has(nav > input[type='checkbox']:checked) {
   --acm-canvas: #161b22;
   --acm-odd: var(--acm-midnight);
   --acm-even: var(--acm-abyss);
-  --nav-shadow: 0 2px rgb(49, 49, 49);
-  --navbar-bg: rgba(16, 19, 21, 0.9);
+  --navbar-bg: var(--acm-ocean);
   --card-bg: var(--acm-gray);
   --button-bg: var(--acm-gray);
   --button-hover: #3d4043;
   --button-toggle: var(--acm-gray);
-  --box-shadow: var(--nav-shadow);
 }
 
 @media (prefers-color-scheme: light) {
@@ -237,13 +233,11 @@ body:has(nav > input[type='checkbox']:checked) {
     --acm-canvas: #eaeaea;
     --acm-odd: var(--perma-light);
     --acm-even: var(--acm-dew);
-    --nav-shadow: 0 3px 12px rgba(16, 19, 21, 0.1);
-    --navbar-bg: var(--acm-light);
+    --navbar-bg: var(--perma-light);
     --card-bg: var(--acm-light);
     --button-bg: var(--acm-dark);
     --button-hover: var(--acm-blue);
     --button-toggle: var(--acm-dark);
-    --box-shadow: var(--nav-shadow);
   }
 }
 
@@ -254,13 +248,10 @@ body:has(nav > input[type='checkbox']:checked) {
     --acm-canvas: #161b22;
     --acm-odd: var(--acm-midnight);
     --acm-even: var(--acm-abyss);
-    --nav-shadow: 0 2px rgb(49, 49, 49);
-    --navbar-bg: rgba(16, 19, 21, 0.9);
-    --footer-bg: var(--acm-gray);
+    --navbar-bg: var(--acm-ocean);
     --card-bg: var(--acm-gray);
     --button-bg: var(--acm-gray);
     --button-hover: #3d4043;
     --button-toggle: var(--acm-gray);
-    --box-shadow: var(--nav-shadow);
   }
 }
