--- a/static/global.css
+++ b/static/global.css
@@ -1,28 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700');
 
 :root {
-  --acm-dew: #ebf8ff;
-  --acm-sky: #38b6ff;
-  --acm-blue: #2c91c6;
-  --acm-bluer: #1e6cff;
-  --acm-turquoise: #11d4b1;
-  --acm-emerald: #21d19f;
-  --acm-lemon: #ffd029;
-  --acm-orange: #ff7917;
-  --acm-red: #d41153;
-  --acm-redder: #6e0025;
-  --acm-pink: #ff4365;
-  --acm-blush: #fe0ec9;
-  --acm-purple: #9d35e7;
-  --acm-darker: #092d71;
-  --acm-darkest: #052155;
-  --acm-ocean: #082863;
-  --acm-abyss: #052155;
-  --acm-midnight: #041536;
-  --acm-dark: #101315;
-  --acm-gray: #292c2f;
-  --acm-light: #f8f8f8;
-  --acm-canvas: #eaeaea;
+  /** These values will never change. */
+  --perma-light-rgb: 248, 248, 248;
+  --perma-light: rgba(var(--perma-light-rgb), 1);
+  --perma-dark-rgb: 16, 19, 21;
+  --perma-dark: rgba(var(--perma-dark-rgb), 1);
+  --acm-dew-rgb: 235, 248, 255;
+  --acm-dew: rgba(var(--acm-dew-rgb), 1);
+  --acm-sky-rgb: 56, 182, 255;
+  --acm-sky: rgba(var(--acm-sky-rgb), 1);
+  --acm-blue-rgb: 44, 145, 198;
+  --acm-blue: rgba(var(--acm-blue-rgb), 1);
+  --acm-bluer-rgb: 30, 108, 255;
+  --acm-bluer: rgba(var(--acm-bluer-rgb), 1);
+  --acm-turquoise-rgb: 17, 212, 177;
+  --acm-turquoise: rgba(var(--acm-turquoise-rgb), 1);
+  --acm-emerald-rgb: 33, 209, 159;
+  --acm-emerald: rgba(var(--acm-emerald-rgb), 1);
+  --acm-lemon-rgb: 255, 208, 41;
+  --acm-lemon: rgba(var(--acm-lemon-rgb), 1);
+  --acm-orange-rgb: 255, 121, 23;
+  --acm-orange: rgba(var(--acm-orange-rgb), 1);
+  --acm-red-rgb: 212, 17, 83;
+  --acm-red: rgba(var(--acm-red-rgb), 1);
+  --acm-redder-rgb: 110, 0, 37;
+  --acm-redder: rgba(var(--acm-redder-rgb), 1);
+  --acm-pink-rgb: 255, 67, 101;
+  --acm-pink: rgba(var(--acm-pink-rgb), 1);
+  --acm-blush-rgb: 254, 14, 201;
+  --acm-blush: rgba(var(--acm-blush-rgb), 1);
+  --acm-purple-rgb: 157, 53, 231;
+  --acm-purple: rgba(var(--acm-purple-rgb), 1);
+  --acm-darker-rgb: 9, 45, 113;
+  --acm-darker: rgba(var(--acm-darker-rgb), 1);
+  --acm-darkest-rgb: 5, 33, 85;
+  --acm-darkest: rgba(var(--acm-darkest-rgb), 1);
+  --acm-ocean-rgb: 8, 40, 99;
+  --acm-ocean: rgba(var(--acm-ocean-rgb), 1);
+  --acm-abyss-rgb: 5, 33, 85;
+  --acm-abyss: rgba(var(--acm-abyss-rgb), 1);
+  --acm-midnight-rgb: 4, 21, 54;
+  --acm-midnight: rgba(var(--acm-midnight-rgb), 1);
+  --acm-gray-rgb: 41, 44, 47;
+  --acm-gray: rgba(var(--acm-gray-rgb), 1);
+  --acm-canvas-rgb: 234, 234, 234;
+  --acm-canvas: rgba(var(--acm-canvas-rgb), 1);
   --acm-union: linear-gradient(
     to right,
     var(--acm-turquoise),
@@ -32,21 +55,24 @@
     var(--acm-pink)
   );
 
+  /** These values represent the ACM team colors. */
   --acm-general-rgb: 5, 163, 255;
   --acm-ai-rgb: 53, 231, 146;
-  --acm-algo-rgb: 157, 53, 231;
-  --acm-design-rgb: 255, 67, 101;
-  --acm-dev-rgb: 30, 108, 255;
-  --acm-gamedev-rgb: 212, 17, 83;
-  --acm-icpc-rgb: 255, 121, 23;
-  --acm-marketing-rgb: 254, 14, 201;
-  --acm-oss-rgb: 17, 212, 177;
-  --acm-special-events-rgb: 255, 208, 41;
-  --acm-nodebuds-rgb: 212, 17, 83;
+  --acm-algo-rgb: var(--acm-purple-rgb);
+  --acm-design-rgb: var(--acm-pink-rgb);
+  --acm-dev-rgb: var(--acm-bluer-rgb);
+  --acm-gamedev-rgb: var(--acm-red-rgb);
+  --acm-icpc-rgb: var(--acm-orange-rgb);
+  --acm-marketing-rgb: var(--acm-blush-rgb);
+  --acm-oss-rgb: var(--acm-turquoise-rgb);
+  --acm-special-events-rgb: var(--acm-lemon-rgb);
+  --acm-nodebuds-rgb: var(--acm-red-rgb);
 
-  --perma-light: #f8f8f8;
-  --perma-dark: #101315;
+  /** These values may change based on the user's color scheme preference. */
+  --acm-light: #f8f8f8;
+  --acm-dark: #101315;
 
+  /** These values are generated fluid font sizes. */
   /* Generator: https://xgkft.csb.app/ (280px-1000px viewport-width, 1rem=16px) */
   --size-xxl: clamp(2.8125rem, 1.8403rem + 5.5556vw, 5.3125rem);
   --size-xl: clamp(2rem, 1.7545rem + 1.0909vw, 3.5rem);
